[gd_scene load_steps=4 format=2]

[ext_resource path="res://SceneControl/Clickable.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://SceneControl/SceneControl.gd" type="Script" id=3]

[node name="SceneControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftSide" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="LeftSide"]
margin_left = 22.0
margin_top = -32.0
margin_right = 86.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="ClickableLeft" type="Area2D" parent="LeftSide"]
position = Vector2( 54, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftSide/ClickableLeft"]
polygon = PoolVector2Array( -30, 0, 30, -30, 30, 30 )

[node name="RighSide" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="RighSide"]
margin_left = -86.0
margin_top = -31.0
margin_right = -22.0
margin_bottom = 33.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="ClickableRight" type="Area2D" parent="RighSide"]
position = Vector2( -54, 0 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RighSide/ClickableRight"]
polygon = PoolVector2Array( 30, 0, -30, -30, -30, 30 )

[connection signal="clicked" from="LeftSide/ClickableLeft" to="." method="_on_ClickableLeft_clicked"]
[connection signal="mouse_entered" from="LeftSide/ClickableLeft" to="LeftSide/ClickableLeft" method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="LeftSide/ClickableLeft" to="LeftSide/ClickableLeft" method="_on_Clickable_mouse_exited"]
[connection signal="clicked" from="RighSide/ClickableRight" to="." method="_on_ClickableRight_clicked"]
[connection signal="mouse_entered" from="RighSide/ClickableRight" to="RighSide/ClickableRight" method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="RighSide/ClickableRight" to="LeftSide/ClickableLeft" method="_on_Clickable_mouse_exited"]
